@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* add Model#isConnected()
 * rename Model.getProperties() to getConnectProperties()
 	deprecated version is provided
 * flush sequences in checkEmptySchema, fixes CopeTest
